src/test/ui/suggestions/try-operator-on-main.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` (or another type that implements `std::ops::Try`)
  --> $DIR/try-operator-on-main.rs:16:5
   |
16 |     std::fs::File::open("foo")?;
   |     ---------------------------
   |     |
   |     cannot use the `?` operator in a function that returns `()`
   |     in this macro invocation
   |
   = help: the trait `std::ops::Try` is not implemented for `()`
   = note: required by `std::ops::Try::from_error`

error[E0277]: the trait bound `(): std::ops::Try` is not satisfied
  --> $DIR/try-operator-on-main.rs:18:5
   |
18 |     try_trait_generic::<()>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::ops::Try` is not implemented for `()`
   |
   = note: required by `try_trait_generic`

error: aborting due to 2 previous errors

